--- a/src/scss/widgets.scss
+++ b/src/scss/widgets.scss
@@ -11,6 +11,32 @@
 .word-wrap{
   word-wrap: break-word;
 }
+.widgets-blur{
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+}
+.widgets-loading{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,.3);
+
+  &.dark{
+    background-color: rgba(0,0,0,.3);
+  }
+
+  &>div{
+    width: 5rem;
+    height: 5rem;
+    margin-top: 25%;
+  }
+}
 
 .ellipsis {
   position: relative;
